# legged_robot_mpc_controller

./: CMakeLists.txt  README.md  legged_robot_mpc_controller.repos  legged_robot_mpc_controller_plugin.xml  package.xml
cmake/: Findtl-expected.cmake
config/g1/: gait.yaml  initial_pose.yaml  ros2_controllers.yaml  ros2_controllers_legacy.yaml
config/g1/stair_climbing/: stair_climbing_ds.yaml  stair_climbing_ss.yaml
config/g1/terrain/stair_climbing/: stair_climbing_sos.yaml  stair_climbing_st.yaml
config/g1/terrain/terrain_walking/: terrain_walking.yaml
config/rviz/: humanoid.rviz  urdf_config.rviz
description/g1/mujoco/: boxes.xml  g1_29dof.xml  scene.xml  slope.xml  stairs.xml  stairs.xml.xacro  stairs_params.yaml
description/g1/rviz/: humanoid.rviz
description/g1/urdf/: g1.ros2_control.xacro  g1.ros2_control_macro.xacro  g1_29dof.urdf  g1_29dof_stairs.urdf  stairs.urdf  stairs.urdf.xacro
docs/: humanoid_migration.md
include/humanoid_centroidal_mpc/: CentroidalMpcInterface.h
include/humanoid_centroidal_mpc/command/: CentroidalMpcTargetTrajectoriesCalculator.h
include/humanoid_centroidal_mpc/common/: CentroidalMpcRobotModel.h
include/humanoid_centroidal_mpc/constraint/: JointMimicKinematicConstraint.h  NormalVelocityConstraintCppAd.h  ZeroVelocityConstraintCppAd.h
include/humanoid_centroidal_mpc/cost/: CentroidalMpcEndEffectorFootCost.h  ICPCost.h
include/humanoid_centroidal_mpc/dynamics/: CentroidalDynamicsAD.h  DynamicsHelperFunctions.h
include/humanoid_centroidal_mpc/initialization/: CentroidalWeightCompInitializer.h
include/humanoid_common_mpc/: HumanoidCostConstraintFactory.h  HumanoidPreComputation.h
include/humanoid_common_mpc/command/: BasePoseCommand.h  TargetTrajectoriesCalculatorBase.h  WalkingVelocityCommand.h
include/humanoid_common_mpc/common/: ModelSettings.h  MpcRobotModelBase.h  Types.h
include/humanoid_common_mpc/constraint/: ContactMomentXYConstraintCppAd.h  EndEffectorKinematicsLinearVelConstraint.h  EndEffectorKinematicsTwistConstraint.h  FootCollisionConstraint.h  FrictionForceConeConstraint.h  JointLimitsSoftConstraint.h  ZeroWrenchConstraint.h
include/humanoid_common_mpc/contact/: ContactCenterPoint.h  ContactPolygon.h  ContactRectangle.h  ContactWrenchMapper.h
include/humanoid_common_mpc/cost/: BaseMotionTrackingCost.h  EndEffectorKinematicCostHelpers.h  EndEffectorKinematicsQuadraticCost.h  ExternalTorqueQuadraticCostAD.h  FrameRelationTrackingCost.h  JointTrackingCost.h  StateInputQuadraticCost.h
include/humanoid_common_mpc/gait/: Gait.h  GaitSchedule.h  GaitScheduleUpdater.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
include/humanoid_common_mpc/initialization/: WeightCompInitializer.h
include/humanoid_common_mpc/pinocchio_model/: DynamicsHelperFunctions.h  PinocchioFrameConversions.h  createPinocchioModel.h  pinocchioUtils.h
include/humanoid_common_mpc/reference_manager/: BreakFrequencyAlphaFilter.h  ProceduralMpcMotionManager.h  StairClimbingPlan.h  SwitchedModelReferenceManager.h  TerrainFootholdPlanner.h
include/humanoid_common_mpc/swing_foot_planner/: CubicSpline.h  ImpactProximityFactorBase.h  SplineCpg.h  SwingTrajectoryPlanner.h
include/humanoid_wb_mpc/: WBMpcInterface.h  WBMpcPreComputation.h
include/humanoid_wb_mpc/command/: WBMpcTargetTrajectoriesCalculator.h
include/humanoid_wb_mpc/common/: WBAccelMpcRobotModel.h  WBAccelPinocchioStateInputMapping.h
include/humanoid_wb_mpc/constraint/: EndEffectorDynamicsAccelerationsConstraint.h  EndEffectorDynamicsLinearAccConstraint.h  JointMimicDynamicsConstraint.h  SwingLegVerticalConstraintCppAd.h  ZeroAccelerationConstraintCppAd.h
include/humanoid_wb_mpc/cost/: EndEffectorDynamicsCostHelpers.h  EndEffectorDynamicsFootCost.h  EndEffectorDynamicsQuadraticCost.h  JointTorqueCostCppAd.h
include/humanoid_wb_mpc/dynamics/: DynamicsHelperFunctions.h  WBAccelDynamicsAD.h
include/humanoid_wb_mpc/end_effector/: EndEffectorDynamics.h  PinocchioEndEffectorDynamicsCppAd.h
include/legged_robot_mpc_controller/: humanoid_wb_mpc_controller.hpp
include/legged_robot_mpc_controller/common/: heading_reference.hpp  ros2_procedural_mpc_motion_manager.hpp  yaw_unwrapper.hpp
include/legged_robot_mpc_controller/common/config/: config_builder_utils.hpp
include/legged_robot_mpc_controller/humanoid_centroidal_mpc/: centroidal_mpc_config_builder.hpp  humanoid_centroidal_mpc_controller.hpp
include/legged_robot_mpc_controller/humanoid_wb_mpc/: humanoid_wb_mpc_controller.hpp  wb_mpc_config_builder.hpp
include/legged_robot_mpc_controller/visualization/: optimized_state_trajectory_visualization.hpp  performance_visualization.hpp
launch/: base_velocity_controller_gui.py  controller_sequence.py  g1.launch.py
launch/command/mpc_targets/: frame_relation_tracking_target.py  joint_frame_relation_tracking_target.py  joint_tracking_target.py
src/: humanoid_wb_mpc_controller.cpp  humanoid_wb_mpc_controller_parameter.yaml  ros2_procedural_mpc_motion_manager.cpp
src/common/: config_builder_utils.cpp  heading_reference.cpp  ros2_procedural_mpc_motion_manager.cpp
src/config/: wb_mpc_config_builder.cpp
src/core/humanoid_centroidal_mpc/src/: CentroidalMpcInterface.cpp
src/core/humanoid_centroidal_mpc/src/command/: CentroidalMpcTargetTrajectoriesCalculator.cpp
src/core/humanoid_centroidal_mpc/src/constraint/: JointMimicKinematicConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroVelocityConstraintCppAd.cpp
src/core/humanoid_common_mpc/src/: HumanoidCostConstraintFactory.cpp  HumanoidPreComputation.cpp
src/core/humanoid_wb_mpc/src/: WBMpcInterface.cpp  WBMpcPreComputation.cpp
src/humanoid_centroidal_mpc/: centroidal_mpc_config_builder.cpp  humanoid_centroidal_mpc_controller.cpp  humanoid_centroidal_mpc_controller_parameter.yaml
src/humanoid_wb_mpc/: humanoid_wb_mpc_controller.cpp  humanoid_wb_mpc_controller_parameter.yaml  wb_mpc_config_builder.cpp
src/visualization/: optimized_state_trajectory_visualization.cpp  performance_visualization.cpp
tests/: stair_climbing_test.sh  terrain_walk_test.sh
(+51 files in other folders)
